--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.3",
     "react-native-screens": "^3.31.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0"
   },
