Implementation of card reading and data recording manually

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -45,3 +45,4 @@ MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
 MYAPP_UPLOAD_STORE_PASSWORD=310495
 MYAPP_UPLOAD_KEY_PASSWORD=310495
+VisionCamera_enableCodeScanner=true
