--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,6 +121,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.1.0')
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
