--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-vision-camera": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
